--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.5.7"
   }
 }
