--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,8 +1,8 @@
 version: v1
 plugins:
   - name: go
-    out: build/proto
+    out: rpc/proto
     opt: paths=source_relative
   - name: connect-go
-    out: build/proto
+    out: rpc/proto
     opt: paths=source_relative
