--- a/front/buf.gen.yaml
+++ b/front/buf.gen.yaml
@@ -1,8 +1,8 @@
 version: v1
 plugins:
   - name: es
-    out: src/lib/proto
+    out: src/proto
     opt: target=ts
   - name: connect-web
-    out: src/lib/proto
+    out: src/proto
     opt: target=ts
