--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "proto-ts": "env PATH=\"$PATH:../bin\" buf generate ../proto"
   },
   "dependencies": {
-    "astro": "^1.6.8"
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.6.8",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@astrojs/svelte": "^1.0.2",
