--- a/front/package.json
+++ b/front/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "sns",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "proto-ts": "env PATH=\"$PATH:../bin\" buf generate ../proto"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.6.8",
-    "tailwindcss": "^3.2.4"
-  },
-  "devDependencies": {
-    "@astrojs/svelte": "^1.0.2",
-    "@bufbuild/connect-web": "^0.3.1",
-    "@bufbuild/protobuf": "^0.2.1",
-    "@bufbuild/protoc-gen-connect-web": "^0.3.1",
-    "@bufbuild/protoc-gen-es": "^0.2.1",
-    "@types/node": "^18.11.9",
-    "svelte": "^3.53.1"
-  }
+	"name": "front",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write .",
+		"proto-ts": "env PATH=\"$PATH:../bin\" buf generate ../proto"
+	},
+	"devDependencies": {
+		"@bufbuild/connect-web": "^0.3.2",
+		"@bufbuild/protobuf": "^0.3.0",
+		"@bufbuild/protoc-gen-connect-web": "^0.3.2",
+		"@bufbuild/protoc-gen-es": "^0.3.0",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.19",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.53.1",
+		"svelte-check": "^2.9.2",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.3",
+		"vite": "^3.2.4"
+	},
+	"type": "module"
 }
